# iu9-algorithms

./: CMakeLists.txt  LICENCE  README.md
1/: CMakeLists.txt
1/1/: CMakeLists.txt  main.c
1/10/: main.c
1/11/: main.c
1/12/: main.c
1/13/: main.c
1/14/: main.c
1/15/: main.c
1/16/: main.c
1/18/: CMakeLists.txt  elem.h  main.c
1/2/: main.c
1/3/: main.c
1/4/: CMakeLists.txt  main.c
1/5/: CMakeLists.txt  main.c
1/6/: main.c
1/9/: main.c
1/concat/: main.c
1/frame/: CMakeLists.txt  main.c
1/maxarray/: main.c
1/peak/: CMakeLists.txt  main.c
1/permut/: main.c
1/polynom/: main.c
1/primediv/: CMakeLists.txt  main.c
1/saddlepoint/: CMakeLists.txt  main.c
1/searchlist/: main.c
1/wcount/: main.c
2/: CMakeLists.txt
2/1/: main.c
2/10/: main  main.c
2/11/: CMakeLists.txt  main
2/13/: CMakeLists.txt  main  main.c
2/14/: CMakeLists.txt  main  main.c  test.py
2/15/: CMakeLists.txt  main  main.c  test.py
2/17/: main  main.c
2/2/: main.c
2/3/: main.c
2/4/: main.c
2/6/: main.c
2/7/: main.c
2/8/: main.c
2/9/: main  main.c
2/bmall/: CMakeLists.txt  main.c
2/bubblesort/: main.c
2/csort/: CMakeLists.txt  main.c  submission.c
2/csort/lib/: CMakeLists.txt
2/csort/lib/include/: csort_utils.h
2/csort/lib/src/: csort_utils.c
2/csort/tests/: CMakeLists.txt  demo.c  tests.c
2/datesort/: CMakeLists.txt  main.c
2/dsort/: CMakeLists.txt  main.c
2/heapsort/: CMakeLists.txt  main.c  submission.c
2/heapsort/lib/: CMakeLists.txt
2/heapsort/lib/include/: heap.h
2/heapsort/lib/src/: heap.c
2/heapsort/tests/: CMakeLists.txt  tests.c
2/kmpall/: main.c
2/maxprod/: CMakeLists.txt  main.c
2/mergesort/: main.c
2/not_working_rangegcd/: CMakeLists.txt
2/not_working_rangegcd/lib/: CMakeLists.txt
2/not_working_rangegcd/lib/include/: segment_tree.h
2/not_working_rangegcd/lib/src/: segment_tree.c
2/power2/: main.c
2/prefixes/: CMakeLists.txt  main.c  submission.c
2/prefixes/lib/: CMakeLists.txt
2/prefixes/lib/include/: prefix.h
2/prefixes/lib/src/: prefix.c
2/prefixes/tests/: CMakeLists.txt  tests.c
2/quicksort/: main.c
2/radixsort/: main.c
2/rangegcd/: CMakeLists.txt  main.c  submission.c
2/rangegcd/lib/: CMakeLists.txt
2/rangegcd/lib/include/: gcd_matrix.h  log_table.h  math_utils.h  table.h
2/rangegcd/lib/src/: gcd_matrix.c  log_table.c  math_utils.c  table.c
2/rangegcd/tests/: CMakeLists.txt  gcd_matrix_tests.c  math_utils_tests.c  table_tests.c  tests.c
2/rangehd/: CMakeLists.txt  main.c  submission.c
2/rangehd/lib/include/: segment_tree.h
2/rangehd/lib/src/: segment_tree.c
2/rangehd/tests/: CMakeLists.txt  tests.c
2/rangemax/: CMakeLists.txt  main.c  submission.c
2/rangemax/lib/include/: segment_tree.h
2/rangemax/lib/src/: segment_tree.c
2/rangemax/tests/: tests.c
2/rangepeak/: CMakeLists.txt  main.c  submission.c
2/rangepeak/lib/include/: segment_tree.h
2/rangepeak/lib/src/: segment_tree.c
2/rangepeak/tests/: CMakeLists.txt  tests.c
2/superstr/: CMakeLists.txt  main.c  shortest_superstring.py
3/11/lib/include/: avl.h  lexer.h
3/11/lib/src/: CMakeLists.txt  avl.c  lexer.c
3/11/main/include/: main.h
3/11/main/src/: CMakeLists.txt  main.c
3/circbuf/: CMakeLists.txt  main.c
3/cluster/: CMakeLists.txt  main.c  submission.c
3/cluster/lib/: CMakeLists.txt
3/cluster/lib/include/: heap.h
3/cluster/lib/src/: heap.c
3/cluster/tests/: CMakeLists.txt  tests.c
3/lexavl/: CMakeLists.txt  main.c  submission.c
3/lexavl/lib/: CMakeLists.txt
3/lexavl/lib/include/: avl.h  lexer.h
3/lexavl/lib/src/: CMakeLists.txt  avl.c  lexer.c
3/listbsort/: CMakeLists.txt  main.c
3/listisort/: CMakeLists.txt  main.c
3/merge/: CMakeLists.txt  main.c  submission.c
3/merge/lib/include/: heap.h
3/merge/lib/src/: heap.c
3/merge/tests/: CMakeLists.txt  tests.c
3/qmax/: CMakeLists.txt  main.c
3/qsstack/: CMakeLists.txt  main.c
3/ranklist/: CMakeLists.txt  main.c  submission.c
3/ranklist/lib/: CMakeLists.txt
3/ranklist/lib/include/: linked_list.h  skip_list.h
3/ranklist/lib/src/: linked_list.c  skip_list.c
3/ranklist/tests/: CMakeLists.txt
3/stackmachine/: CMakeLists.txt  main.c
